# wasm-data-profiler

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: deploy.yml
api/: pyproject.toml
api/app/: dialect.py  main.py  models.py  profiler.py
api/tests/: test_main.py  test_profiler.py
benchmarks/: bench_pandas.py  bench_wasm.mjs  make_fixtures.py
crates/core/: Cargo.toml
crates/core/src/: decode.rs  dialect.rs  lib.rs  number.rs  profile.rs  reader.rs  stats.rs  value.rs
crates/core/tests/: profile.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
web/: compare.ts  dom.ts  index.html  main.ts  package-lock.json  package.json  styles.css  tsconfig.json  tsconfig.worker.json  types.ts  worker.ts
