[project]
name = "mirante-api"
version = "0.1.0"
description = "Profiles a CSV with pandas, in the format the Wasm engine returns. Benchmark baseline only."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.2",
    "pandas>=3.0.3",
    "pyarrow>=25.0.0",
    "python-multipart>=0.0.32",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "ruff>=0.15.22",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN"]
