[package]
name = "mirante-wasm"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Thin wasm-bindgen shell around mirante-core."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
mirante-core = { version = "0.1.0", path = "../core" }
serde = "1.0.229"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.126"
